tooltips cut off on second (non-retina) screen
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
People
(Reporter: tnikkel, Assigned: spohl)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I still see the problem with tooltips being cut off like bug 1648683. Sometimes if I wait a second the tooltip gets resized to the proper size, but many times it never resizes.
It seems easy to reproduce using these steps:
open gmail on second screen that is non-retina.
open a bugmail.
hover over the bug number.
I know that I tested the build in bug 1648683 and confirmed that it was fixed but I think I only tested the right click menu on a retina screen problem, not the tooltip on non-retina screen problem.
| Reporter | ||
Comment 1•5 years ago
|
||
These STRs are 100% reliable for me.
open gmail on second screen that is non-retina.
open a bugmail.
hover over the bug number.
open a second bugmail.
hover over the bug number.
tooltip is cutoff.
-> bug 1592416
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Timothy, could you check if either one, or both, of these try builds fixes this issue for you?
https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/TopWL3PxSsWj6zxSxjxaiQ/runs/0/artifacts/public/build/target.dmg
https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/CxGf2aYiQDyfUAJ-e0YXUA/runs/0/artifacts/public/build/target.dmg
Thank you!
| Reporter | ||
Comment 3•5 years ago
|
||
The problem seems fixed in both of those! To double check I downloaded a random try build of my own and I could reproduce the problem in that build easily.
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
With this fix I am able to reproduce the problem where the tooltip opens on the wrong screen (bug 1648683) again. I'll open a new bug and link it here.
Steps to reproduce: I assign Nightly to one particular screen, then move the window to another screen, then trigger a tooltip and it is displayed on the wrong screen.
I can't reproduce the tooltip being cutoff. I think that is because it is related to the screen sizes/resolutions. If we can get a reproducible test case, we can try and fix these both in 86.
| Reporter | ||
Comment 9•5 years ago
|
||
Here is all the info related to my setup.
Late 2019 16" macbook pro. I have the scaling/resolution for the built is display set at default, but that seems to be a "scaled" mode I think. If I use cmd+shift+4 to take a screenshot of a rect that rect is 1792x1120 but the display is 3072 x 1920, note that this is not a 2x scale factor but rather ~1.7. (I haven't changed anything, this is the default). Then I have a non-retina display attached, it is 1920 x 1200. It's configured to the right of the built in screen. The dock is on the built in screen.
And the problem is 100% reproducible for me in fresh profiles (repeat the steps in comment 0 two times). I haven't seen bug 1648683 on my setup.
Thanks.
Comment 10•5 years ago
|
||
(In reply to Timothy Nikkel (:tnikkel) from comment #9)
Here is all the info related to my setup.
Thanks, that helped! I'm able to reproduce it with a 1600×1200 older monitor attached to my 2015 2880×1800 MacBook Pro. (On a build without the fix.)
Updated•5 years ago
|
Updated•5 years ago
|
Comment 11•5 years ago
|
||
I've tried to reproduce this bug using the steps from comment 1, on a macOS 10.15 and an external monitor attached. The issue didn't reproduce for me on an affected Nightly build from 2020-09-12. The secondary displayed I've used was a 2k, but I changed the resolution to a lower one i.e. 720p, 1600x900, hoping that I will see the bug.
Timothy, would you mind helping us with this bug, is the issue fixed on your end, using the latest Beta 86 build?
Comment 13•5 years ago
|
||
Thanks! Marking this verified as fixed per comment 12.
Updated•5 years ago
|
Description
•