Bug 1664670: Prevent tooltips from getting cut off on secondary screens on macOS. r=haik

Differential Revision: https://phabricator.services.mozilla.com/D101113